--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -12,6 +12,7 @@
   <p>Random</p>
   <h1>Notes-app</h1>
   <p>some text</p>
+  <button>Create Note</button>
   <script src="notes-app.js"></script>
 </body>
 </html>
