--- a/todo-app/todo-app.html
+++ b/todo-app/todo-app.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Todos-app</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
 </head>
 <body>
+  <button>Click me</button>
   <h1>This is my H1</h1>
   <p>Hustle</p>
   <p>Nicki the Minaj</p>
   <p>the Snow</p>
   <p>Sonny</p>
   <p>HI, Bye, Haters</p>
-  <script src="main.js"></script>
+  <script src="todos.js"></script>
 </body>
 </html>
